fix: Integration tests pass + Java 25 sweep for elements/util/engine sub-packages
Integration fix (48 tests now passing):
- SpiffeWorkloadIdentity: add validateSpiffeId() rejecting empty trust domain
- SpiffeWorkloadIdentityTest: add missing Duration import, fix issuedAt for 50% elapsed assertion

Java 25 refinements:
- elements/: YAttributeMap, YCondition, YDecomposition, YMultiInstanceAttributes,
  YSpecification, YTask, data/YParameter, data/YVariable - var, diamond, switch
- engine/gui/YAdminGUI: var locals, switch expressions
- engine/interfce/InterfaceBWebsideController: var locals, collection factories
- util/: AbstractCheckSumTask, CheckSumTask, PluginLoaderUtil - var, diamond, String API
- documentStore/DocumentStore: var locals, collection factory methods
- procletService/DBConnection: diamond inference
- yawl-elements/pom.xml: test configuration updates

https://claude.ai/code/session_01Q6XzCtWk7ibKmErheFYANF